# MoPhiEssentials

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MIGRATION.md  README.md  STATUS.md  mophi_essentials.h
algorithms/: CMakeLists.txt  README.md  linear_algebra.h  sorting.h
cmake/: CudaSupportedArchitectures.cmake  MoPhiEssentialsConfig.cmake.in
common/: CMakeLists.txt  README.md  macros.h  types.h
core/: CMakeLists.txt  README.md  mesh.h  vector.h
data/: beam.vtu  cube_mesh.vtu  tet10_mesh.vtu  tet20_unsupported.vtu  tet_mesh_exp.vtu
demo/: CMakeLists.txt  HelloWorld.cpp  TestContainers.cpp  TestContainersCpu.cpp  TestDualArray.cpp  TestMesh.cpp  TestMeshIO.cpp  TestMsg.cpp  TestQuaternion.cpp  TestReal.cu  TestReal3.cu  TestSurfaceMeshIO.cpp  TestUnifiedGPUHeader.cu  TestUnifiedHeader.cpp  mesh_output.vtu
docs/: README.md
examples/: CMakeLists.txt  example_algorithms.cpp  example_mesh.cpp  example_vector.cpp
kernels/: CMakeLists.txt  README.md  vector_ops.h
src/: MoPhiEssentials.h  MoPhiEssentialsGPU.cuh
src/algorithms/: CMakeLists.txt  CubInstantiations.cu  CubWrappers.cuh  DynamicsMisc.cu  StaticDeviceSubroutines.h  Utilities.cuh
src/common/: CMakeLists.txt  Compression.hpp  Defines.hpp  Mesh.hpp  SharedStructs.hpp  VariableTypes.hpp
src/core/: ApiVersion.h  ApiVersion.h.in  BaseClasses.hpp  CMakeLists.txt  CpuOnlyStub.cpp  CudaAllocator.hpp  DataClasses.hpp  DataClassesCpu.hpp  DataClassesCuda.hpp  DataContainerBase.hpp  DataMigrationHelper.hpp  GpuManager.cpp  GpuManager.h  Int3.hpp  Logger.hpp  ManagedMemory.hpp  Quaternion.hpp  Real3.hpp  Real4.hpp  ThreadManager.hpp  WavefrontMeshLoader.hpp
src/kernels/: CMakeLists.txt  CUDAMathHelpers.cuh  Compression.cuh  Constants.cuh  HelperKernels.cuh
src/utils/: CMakeLists.txt  Csv.hpp  HostHelpers.hpp  MeshIO.hpp  Timer.hpp  pugiconfig.hpp  pugixml.cpp  pugixml.hpp  robin_hood.h
tests/: CMakeLists.txt  test_mesh.cpp  test_vector.cpp
utils/: CMakeLists.txt  README.md  logger.h  timer.h
